# dew

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  TODO.md  flake.nix
.github/workflows/: ci.yml  deploy-docs.yml
.normalize/: complexity-allow
crates/dew-all/: Cargo.toml
crates/dew-all/src/: lib.rs
crates/dew-complex/: Cargo.toml
crates/dew-complex/src/: c.rs  cranelift.rs  cuda.rs  funcs.rs  glsl.rs  hip.rs  lib.rs  lua.rs  opencl.rs  ops.rs  optimize.rs  parity_tests.rs  wgsl.rs
crates/dew-complex/src/cranelift/: jit.rs
crates/dew-cond/: Cargo.toml
crates/dew-cond/src/: c.rs  cranelift.rs  cuda.rs  glsl.rs  hip.rs  lib.rs  lua.rs  opencl.rs  rust.rs  tokenstream.rs  wgsl.rs
crates/dew-core/: Cargo.toml
crates/dew-core/src/: lib.rs  optimize.rs
crates/dew-linalg/: Cargo.toml
crates/dew-linalg/src/: c.rs  cranelift.rs  cuda.rs  exhaustive_tests.rs  funcs.rs  glsl.rs  hip.rs  lib.rs  lua.rs  opencl.rs  ops.rs  optimize.rs  parity_tests.rs  tokenstream.rs  wgsl.rs
crates/dew-linalg/src/cranelift/: jit.rs  tests.rs
crates/dew-quaternion/: Cargo.toml
crates/dew-quaternion/src/: c.rs  cranelift.rs  cuda.rs  funcs.rs  glsl.rs  hip.rs  lib.rs  lua.rs  opencl.rs  ops.rs  parity_tests.rs  rust.rs  wgsl.rs
crates/dew-quaternion/src/cranelift/: jit.rs
crates/dew-scalar/: Cargo.toml
crates/dew-scalar/src/: c.rs  cranelift.rs  cuda.rs  glsl.rs  hip.rs  lib.rs  lua.rs  opencl.rs  optimize.rs  tokenstream.rs  wgsl.rs
crates/dew-wasm/: Cargo.toml
crates/dew-wasm/src/: lib.rs
crates/sap-complex/: Cargo.toml
crates/sap-complex/src/: cranelift.rs  funcs.rs  lib.rs  lua.rs  ops.rs  wgsl.rs
crates/sap-core/: Cargo.toml
crates/sap-core/src/: lib.rs
crates/sap-cranelift/: Cargo.toml
crates/sap-cranelift/src/: lib.rs
crates/sap-lua/: Cargo.toml
crates/sap-lua/src/: lib.rs
crates/sap-quaternion/: Cargo.toml
crates/sap-quaternion/src/: cranelift.rs  funcs.rs  lib.rs  lua.rs  ops.rs  wgsl.rs
crates/sap-std/: Cargo.toml
crates/sap-std/src/: lib.rs
crates/sap-wgsl/: Cargo.toml
crates/sap-wgsl/src/: lib.rs
crates/wick-all/: Cargo.toml
crates/wick-all/src/: lib.rs
crates/wick-complex/src/: c.rs  cuda.rs  glsl.rs  lib.rs  lua.rs  opencl.rs  rust.rs  tokenstream.rs
crates/wick-complex/src/cranelift/: jit.rs
crates/wick-cond/: Cargo.toml
crates/wick-cond/src/: c.rs  glsl.rs  lib.rs  lua.rs
crates/wick-core/: Cargo.toml
crates/wick-core/src/: lib.rs  optimize.rs
crates/wick-linalg/: Cargo.toml
crates/wick-linalg/src/: exhaustive_tests.rs  glsl.rs  lib.rs  lua.rs  optimize.rs  rust.rs  wgsl.rs
crates/wick-linalg/src/cranelift/: jit.rs  tests.rs
crates/wick-quaternion/src/: c.rs  glsl.rs  lib.rs  lua.rs  opencl.rs  optimize.rs  tokenstream.rs
crates/wick-scalar/: Cargo.toml
crates/wick-scalar/src/: cranelift.rs  cuda.rs  glsl.rs  hip.rs  lib.rs  lua.rs  optimize.rs  rust.rs  wgsl.rs
crates/wick-wasm/: Cargo.toml
crates/wick-wasm/src/: lib.rs
docs/: api-reference.md  complex.md  core.md  domain-crates-design.md  index.md  integration.md  introduction.md  linalg-design.md  linalg.md  optimization.md  package.json  playground.md  quaternion.md  scalar.md  use-cases.md
docs/.vitepress/: config.ts
docs/.vitepress/playground/components/: AstViewer.vue  OutputPanel.vue  PlaygroundEditor.vue  WickPlayground.vue
docs/.vitepress/playground/languages/: wick-monarch.ts
docs/backends/: c.md  cranelift.md  cuda.md  glsl.md  hip.md  lua.md  opencl.md  rust.md  tokenstream.md  wgsl.md
editors/: README.md
editors/textmate/: wick.tmLanguage.json
editors/tree-sitter-wick/: README.md  grammar.js  package.json
editors/vscode/: README.md  package.json
examples/: basic.rs  complex.rs  conditionals.rs  linalg.rs  quaternion.rs  wgsl_codegen.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_backend_parity.rs  fuzz_complex_parity.rs  fuzz_eval.rs  fuzz_linalg_parity.rs  fuzz_parse.rs  fuzz_quaternion_parity.rs  fuzz_roundtrip.rs
playground/src/: App.tsx
playground/src/styles/: index.css
scripts/: build-wasm.sh
