[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhi-zone/dew"

[workspace.dependencies]
wick-core = { path = "crates/dew-core", version = "0.1.0" }
wick-cond = { path = "crates/dew-cond", version = "0.1.0" }
wick-scalar = { path = "crates/dew-scalar", version = "0.1.0" }
wick-linalg = { path = "crates/dew-linalg", version = "0.1.0" }
wick-complex = { path = "crates/dew-complex", version = "0.1.0" }
wick-quaternion = { path = "crates/dew-quaternion", version = "0.1.0" }
wick-all = { path = "crates/dew-all", version = "0.1.0" }

# Root package for examples
[package]
name = "dew-examples"
version = "0.0.0"
edition = "2024"
publish = false

[features]
default = []
wgsl = ["wick-scalar/wgsl"]

[dependencies]
wick-core = { workspace = true, features = ["cond", "func"] }
wick-scalar = { workspace = true }
wick-linalg = { workspace = true }
wick-complex = { workspace = true }
wick-quaternion = { workspace = true }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "conditionals"
path = "examples/conditionals.rs"

[[example]]
name = "wgsl_codegen"
path = "examples/wgsl_codegen.rs"
required-features = ["wgsl"]

[[example]]
name = "linalg"
path = "examples/linalg.rs"

[[example]]
name = "complex"
path = "examples/complex.rs"

[[example]]
name = "quaternion"
path = "examples/quaternion.rs"
