[package]
name = "rhizome-dew-cond"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Conditional and boolean support for dew expressions"

[features]
default = []
wgsl = []
lua = ["mlua"]
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module"]
all = ["wgsl", "lua", "cranelift"]

[dependencies]
rhizome-dew-core = { workspace = true, features = ["cond"] }

# Lua backend
mlua = { version = "0.10", features = ["luajit", "vendored"], optional = true }

# Cranelift backend
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
