[package]
name = "rhizome-dew-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core expression language for dew"

[features]
default = ["introspect"]
cond = []
func = []
introspect = []  # AST introspection: free_vars, etc.

[dependencies]

[dev-dependencies]
proptest = "1.5"
