[package]
name = "wick-quaternion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quaternion support for wick expressions"

[features]
default = []
wgsl = ["wick-cond/wgsl"]
glsl = ["wick-cond/glsl"]
rust = ["wick-cond/rust"]  # Rust text codegen
c = ["wick-cond/c"]        # C text codegen
opencl = ["wick-cond/opencl"]  # OpenCL kernel codegen
cuda = ["wick-cond/cuda"]      # CUDA kernel codegen
hip = ["wick-cond/hip"]        # HIP kernel codegen (AMD ROCm)
tokenstream = ["wick-cond/tokenstream", "quote", "proc-macro2"]  # TokenStream codegen for proc-macros
lua-codegen = ["wick-cond/lua-codegen"]  # Pure Rust codegen, WASM-compatible
lua = ["lua-codegen", "mlua"]                    # Full Lua with execution via mlua
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "wick-cond/cranelift"]
optimize = ["wick-core/optimize"]  # Expression optimization passes
all = ["wgsl", "glsl", "rust", "c", "opencl", "cuda", "hip", "tokenstream", "lua", "cranelift"]

[dependencies]
wick-core = { workspace = true, features = ["func"] }
wick-cond.workspace = true
num-traits = "0.2"

# TokenStream backend
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

mlua = { version = "0.10", features = ["luajit", "vendored"], optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
