[package]
name = "wick-all"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Combined domain crate for wick expressions (linalg + complex + quaternion)"

[features]
default = ["scalar", "linalg", "complex", "quaternion"]
scalar = ["wick-scalar"]
linalg = ["wick-linalg", "wick-linalg/4d"]
complex = ["wick-complex"]
quaternion = ["wick-quaternion"]

# Backend features - propagate to all domain crates
wgsl = [
    "wick-scalar?/wgsl",
    "wick-linalg?/wgsl",
    "wick-complex?/wgsl",
    "wick-quaternion?/wgsl",
]
glsl = [
    "wick-scalar?/glsl",
    "wick-linalg?/glsl",
    "wick-complex?/glsl",
    "wick-quaternion?/glsl",
]
rust = [
    "wick-scalar?/rust",
    "wick-linalg?/rust",
    "wick-complex?/rust",
    "wick-quaternion?/rust",
]
c = [
    "wick-scalar?/c",
    "wick-linalg?/c",
    "wick-complex?/c",
    "wick-quaternion?/c",
]
opencl = [
    "wick-scalar?/opencl",
    "wick-linalg?/opencl",
    "wick-complex?/opencl",
    "wick-quaternion?/opencl",
]
cuda = [
    "wick-scalar?/cuda",
    "wick-linalg?/cuda",
    "wick-complex?/cuda",
    "wick-quaternion?/cuda",
]
hip = [
    "wick-scalar?/hip",
    "wick-linalg?/hip",
    "wick-complex?/hip",
    "wick-quaternion?/hip",
]
tokenstream = [
    "wick-scalar?/tokenstream",
    "wick-linalg?/tokenstream",
    "wick-complex?/tokenstream",
    "wick-quaternion?/tokenstream",
]
lua = [
    "wick-scalar?/lua",
    "wick-linalg?/lua",
    "wick-complex?/lua",
    "wick-quaternion?/lua",
]
cranelift = [
    "wick-scalar?/cranelift",
    "wick-linalg?/cranelift",
    "wick-complex?/cranelift",
    "wick-quaternion?/cranelift",
]
optimize = [
    "wick-scalar?/optimize",
    "wick-linalg?/optimize",
    "wick-complex?/optimize",
    "wick-quaternion?/optimize",
]

[dependencies]
wick-core = { workspace = true, features = ["func"] }
num-traits = "0.2"

# Optional domain crate dependencies
wick-scalar = { workspace = true, optional = true }
wick-linalg = { workspace = true, optional = true }
wick-complex = { workspace = true, optional = true }
wick-quaternion = { workspace = true, optional = true }
